<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="match_parent"
	android:layout_height="match_parent">
	<TableLayout android:layout_width="match_parent"
		android:layout_height="wrap_content" android:id="@+id/tableLayout1">
		<TableRow android:id="@+id/tableRow1" android:layout_width="wrap_content"
			android:layout_height="wrap_content">
			<TextView android:layout_height="wrap_content" android:id="@+id/textView1"
				android:layout_width="wrap_content" android:textAppearance="?android:attr/textAppearanceSmall"
				android:text="@string/player_name"></TextView>
			<EditText android:layout_height="wrap_content" android:id="@+id/editText1"
				android:layout_width="200px">
				<requestFocus></requestFocus>
			</EditText>
		</TableRow>
		<TableRow android:id="@+id/tableRow2" android:layout_width="wrap_content"
			android:layout_height="wrap_content">
			<TextView android:layout_height="wrap_content" android:id="@+id/textView2"
				android:layout_width="wrap_content" android:textAppearance="?android:attr/textAppearanceSmall"
				android:text="@string/card_sets"></TextView>
			<EditText android:layout_height="wrap_content" android:id="@+id/editText2"
				android:layout_width="200px"></EditText>
		</TableRow>
		<TableRow android:id="@+id/tableRow3" android:layout_width="wrap_content"
			android:layout_height="wrap_content">
			<TextView android:layout_width="wrap_content"
				android:textAppearance="?android:attr/textAppearanceSmall"
				android:id="@+id/textView3" android:layout_height="wrap_content"
				android:text="@string/playerNum"></TextView>
			<RadioGroup android:id="@+id/myRadioGroup"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:orientation="horizontal">

				<RadioButton android:id="@+id/myRadioButton1"
					android:layout_width="wrap_content" android:layout_height="wrap_content"
					android:text="2" />
				<RadioButton android:id="@+id/myRadioButton2"
					android:layout_width="wrap_content" android:layout_height="wrap_content"
					android:text="4" />
				<RadioButton android:id="@+id/myRadioButton3"
					android:layout_width="wrap_content" android:layout_height="wrap_content"
					android:text="8" />
			</RadioGroup>
		</TableRow>
		<TableRow android:id="@+id/tableRow4" android:layout_width="wrap_content"
			android:layout_height="wrap_content">
			<Button android:layout_height="wrap_content" android:id="@+id/button7"
				android:layout_width="50px" android:text="@string/reset"></Button>
			<Button android:layout_height="wrap_content" android:id="@+id/button8"
				android:layout_width="100px" android:text="@string/sure"></Button>
		</TableRow>
	</TableLayout>
</LinearLayout>
